<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AzStackSDKSample</string>
    <string name="choose_username">Enter your app user id</string>
    <string name="choose_friend_username">Enter your friend&#8217;s user id which you want to chat with</string>
    <string name="next">Continue</string>
    <string name="connecting">Connecting...</string>
    <string name="connection_error">Can not connect to AzStack service. Please check your internet network and try again.</string>
    <string name="get_app_token_fail">Get app token fail. Please check your get token api and try again.</string>
    <string name="app_user_id_invalid">App user id must be at least 5 characters and includes only a&#8211;z, A&#8211;Z, 0&#8211;9,.,-,_. Please try again.</string>
    <string name="send_message">Send message</string>
    <string name="conversations">Conversations</string>
    <string name="authen_success">Authenticate successfully. You can start chatting now.</string>
    <string name="call">Free call</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_success">Disconnect successfully</string>
    <string name="title_activity_maps">Map</string>

</resources>